# rust-full-text-search

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: document.rs  main.rs  searchdata.rs
